--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-    "homepage": "https://wojtek2137.github.io/lazy-website/",
     "name": "lazy-website",
     "version": "0.1.0",
+    "homepage": "https://www.lazyswingband.com",
     "private": true,
     "dependencies": {
         "@emotion/react": "^11.10.5",
