feat: Add 'Lato z Radiem' section with Polish Radio partnership
- Created new LatoZRadiemSection component with modern layout
- Added responsive image collage with floating animations
- Optimized 4 new images with responsive versions (WebP + JPG)
- Added clickable city links to 8 Polish Radio articles
- Integrated Polskie Radio Jedynka logo with link to main article
- Moved section to second position for better visibility
- Updated navigation menu with new section link
- Added proper accessibility features and hover effects
- Showcases partnership with Polish Radio's 'Lato z Radiem' program

--- a/public/images/responsive/image-manifest.json
+++ b/public/images/responsive/image-manifest.json
@@ -398,5 +398,27 @@
       "size": "5KB",
       "format": "webp"
     }
+  },
+  "homepage-hero": {
+    "desktop": {
+      "path": "./responsive/homepage-hero_desktop.webp",
+      "size": "384.5KB",
+      "format": "webp"
+    },
+    "tablet": {
+      "path": "./responsive/homepage-hero_tablet.webp",
+      "size": "111.3KB",
+      "format": "webp"
+    },
+    "mobile": {
+      "path": "./responsive/homepage-hero_mobile.webp",
+      "size": "53.8KB",
+      "format": "webp"
+    },
+    "thumb": {
+      "path": "./responsive/homepage-hero_thumb.webp",
+      "size": "7.5KB",
+      "format": "webp"
+    }
   }
 }
